[gd_scene load_steps=35 format=3 uid="uid://bfm0brg2s1iyp"]

[ext_resource type="Texture2D" uid="uid://d0hpo2yp78fwc" path="res://assets/image/plant/plantshadow.png" id="1_bkrgt"]
[ext_resource type="Script" uid="uid://b4af1prilnf1b" path="res://scripts/character/plant/plant_032_magnet_shroom.gd" id="1_fldiv"]
[ext_resource type="Texture2D" uid="uid://c5i3v2h1dou6p" path="res://assets/reanim/Magnetshroom_stem.png" id="1_ufpee"]
[ext_resource type="Resource" uid="uid://rho1rq5k8uol" path="res://resources/plant_resource/plant_condition/000_common_plant_land.tres" id="2_2klmn"]
[ext_resource type="Texture2D" uid="uid://dnmepex12p3xq" path="res://assets/reanim/Magnetshroom_stemcap.png" id="2_bkrgt"]
[ext_resource type="Texture2D" uid="uid://2snv65tl4xk6" path="res://assets/reanim/Magnetshroom_stemcap_overlay.png" id="4_fldiv"]
[ext_resource type="Texture2D" uid="uid://dl3cfd2n18484" path="res://assets/reanim/Magnetshroom_eye1.png" id="5_2klmn"]
[ext_resource type="Texture2D" uid="uid://cac85x53tvblx" path="res://assets/reanim/Magnetshroom_eyeblink3.png" id="6_jtvqg"]
[ext_resource type="Texture2D" uid="uid://citlxbtlnmov6" path="res://assets/reanim/Magnetshroom_head2.png" id="6_sijw0"]
[ext_resource type="Texture2D" uid="uid://b03m7og0h7653" path="res://assets/reanim/Magnetshroom_eyebrow.png" id="7_sijw0"]
[ext_resource type="Animation" uid="uid://crcgp4xy72of0" path="res://animation/character/plant/032_magnet_shroom/Magnetshroom_idle.tres" id="9_og13q"]
[ext_resource type="Animation" uid="uid://d4mvc6wrs744f" path="res://animation/character/plant/032_magnet_shroom/Magnetshroom_nonactive_idle2.tres" id="10_n47jy"]
[ext_resource type="Texture2D" uid="uid://3vt8nkxfdqsb" path="res://assets/reanim/Magnetshroom_dot.png" id="11_ictkq"]
[ext_resource type="Animation" uid="uid://cvcrqy3gtiaom" path="res://animation/character/plant/032_magnet_shroom/Magnetshroom_nonactive_idle.tres" id="11_tjlpc"]
[ext_resource type="Texture2D" uid="uid://bou3ibngk01aq" path="res://assets/reanim/Magnetshroom_shock3.png" id="12_og13q"]
[ext_resource type="Animation" uid="uid://cq0rhsyu667e2" path="res://animation/character/plant/032_magnet_shroom/Magnetshroom_shooting.tres" id="12_yhey8"]
[ext_resource type="Animation" uid="uid://lj17wuby085" path="res://animation/character/plant/032_magnet_shroom/Magnetshroom_sleep.tres" id="13_i3ey4"]
[ext_resource type="PackedScene" uid="uid://dk13yxwm7s2j8" path="res://scenes/character/plant/sleep_shroom_base.tscn" id="18_jtvqg"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0q7qt"]
_data = {
&"Magnetshroom_idle": ExtResource("9_og13q"),
&"Magnetshroom_nonactive_idle": ExtResource("11_tjlpc"),
&"Magnetshroom_nonactive_idle2": ExtResource("10_n47jy"),
&"Magnetshroom_shooting": ExtResource("12_yhey8"),
&"Magnetshroom_sleep": ExtResource("13_i3ey4")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6te6e"]
animation = &"Magnetshroom_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6vqpq"]
animation = &"Magnetshroom_nonactive_idle2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sx43b"]
animation = &"Magnetshroom_shooting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fmtat"]
animation = &"Magnetshroom_sleep"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uaxcm"]
advance_mode = 2
advance_expression = "is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w8uqx"]
advance_mode = 2
advance_expression = "not is_idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qnhe6"]
advance_mode = 2
advance_expression = "not is_sleep"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w0x5d"]
advance_mode = 2
advance_expression = "is_shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0kjhv"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pj7e0"]
advance_mode = 2
advance_expression = "is_can_shoot
"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dex4y"]
states/Magnetshroom_idle/node = SubResource("AnimationNodeAnimation_6te6e")
states/Magnetshroom_idle/position = Vector2(401, 160)
states/Magnetshroom_nonactive_idle2/node = SubResource("AnimationNodeAnimation_6vqpq")
states/Magnetshroom_nonactive_idle2/position = Vector2(661, 265)
states/Magnetshroom_shooting/node = SubResource("AnimationNodeAnimation_sx43b")
states/Magnetshroom_shooting/position = Vector2(661, 160)
states/Magnetshroom_sleep/node = SubResource("AnimationNodeAnimation_fmtat")
states/Magnetshroom_sleep/position = Vector2(401, 49)
transitions = ["Start", "Magnetshroom_idle", SubResource("AnimationNodeStateMachineTransition_uaxcm"), "Start", "Magnetshroom_sleep", SubResource("AnimationNodeStateMachineTransition_w8uqx"), "Magnetshroom_sleep", "Magnetshroom_idle", SubResource("AnimationNodeStateMachineTransition_qnhe6"), "Magnetshroom_idle", "Magnetshroom_shooting", SubResource("AnimationNodeStateMachineTransition_w0x5d"), "Magnetshroom_shooting", "Magnetshroom_nonactive_idle2", SubResource("AnimationNodeStateMachineTransition_0kjhv"), "Magnetshroom_nonactive_idle2", "Magnetshroom_idle", SubResource("AnimationNodeStateMachineTransition_pj7e0")]
graph_offset = Vector2(201, 75)

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_4f0f1"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ndixe"]
graph_offset = Vector2(-37.7107, 23.4711)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_dex4y")
nodes/StateMachine/position = Vector2(80, 120)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_4f0f1")
nodes/TimeScale/position = Vector2(340, 120)
nodes/output/position = Vector2(540, 140)
node_connections = [&"TimeScale", 0, &"StateMachine", &"output", 0, &"TimeScale"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fldiv"]
size = Vector2(50, 60)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jtvqg"]
radius = 187.501
height = 495.001

[node name="MagnetShroom" type="Node2D"]
script = ExtResource("1_fldiv")
plant_condition = ExtResource("2_2klmn")
no_blink = true

[node name="Body" type="Node2D" parent="."]
position = Vector2(-43, -39)

[node name="shadow" type="Sprite2D" parent="Body"]
position = Vector2(41, 66)
texture = ExtResource("1_bkrgt")

[node name="Magnetshroom_stem" type="Sprite2D" parent="Body"]
position = Vector2(35.5717, 57.7133)
scale = Vector2(0.619549, 0.638752)
texture = ExtResource("1_ufpee")
centered = false

[node name="Magnetshroom_stemcap" type="Sprite2D" parent="Body"]
position = Vector2(28, 43.6416)
scale = Vector2(0.585416, 0.636734)
texture = ExtResource("2_bkrgt")
centered = false

[node name="Anim_face" type="Sprite2D" parent="Body"]
position = Vector2(2.71504, -8.06015)
scale = Vector2(0.585416, 0.636734)
texture = ExtResource("6_sijw0")
centered = false

[node name="Magnetshroom_stemcap_overlay" type="Sprite2D" parent="Body"]
position = Vector2(27.9717, 43.6416)
scale = Vector2(0.585416, 0.636734)
texture = ExtResource("4_fldiv")
centered = false

[node name="Anim_eyes" type="Sprite2D" parent="Body"]
visible = false
position = Vector2(34.9, 36.4)
scale = Vector2(0.6, 0.62)
texture = ExtResource("5_2klmn")
centered = false

[node name="Anim_eyes2" type="Sprite2D" parent="Body"]
visible = false
position = Vector2(49.6, 31.6)
scale = Vector2(0.57, 0.589)
texture = ExtResource("5_2klmn")
centered = false

[node name="Anim_eyes21" type="Sprite2D" parent="Body"]
position = Vector2(49.3283, 30.3982)
scale = Vector2(0.510133, 0.536301)
texture = ExtResource("5_2klmn")
centered = false

[node name="Anim_eyes22" type="Sprite2D" parent="Body"]
position = Vector2(34.9, 34.8699)
scale = Vector2(0.585416, 0.616018)
texture = ExtResource("5_2klmn")
centered = false

[node name="Blink2" type="Sprite2D" parent="Body"]
visible = false
position = Vector2(49.1, 31)
scale = Vector2(0.542, 0.549)
texture = ExtResource("6_jtvqg")
centered = false

[node name="Blink1" type="Sprite2D" parent="Body"]
visible = false
position = Vector2(34.3, 35.8)
scale = Vector2(0.595, 0.603)
texture = ExtResource("6_jtvqg")
centered = false

[node name="Magnetshroom_eyebrows" type="Sprite2D" parent="Body"]
position = Vector2(40.6, 29.6832)
rotation = 1.20928
scale = Vector2(0.629018, 0.59285)
skew = -0.0583828
texture = ExtResource("7_sijw0")
centered = false

[node name="Magnetshroom_eyebrows2" type="Sprite2D" parent="Body"]
position = Vector2(47.8283, 26.2115)
rotation = 1.78172
scale = Vector2(0.633018, 0.587416)
skew = -3.10267
texture = ExtResource("7_sijw0")
centered = false

[node name="Magnetshroom_spot" type="Sprite2D" parent="Body"]
visible = false
self_modulate = Color(1, 1, 1, 0.6)
position = Vector2(64.8, 20.2)
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_ictkq")
centered = false

[node name="Magnetshroom_shock" type="Sprite2D" parent="Body"]
visible = false
position = Vector2(59.6, 13.4)
rotation = 0.47473
scale = Vector2(0.676, 0.599)
texture = ExtResource("12_og13q")
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0q7qt")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_ndixe")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../AnimationPlayer")
parameters/TimeScale/scale = 1.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_fldiv")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4100
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-0.5, 0.5)
rotation = 1.57038
shape = SubResource("CapsuleShape2D_jtvqg")

[node name="CurrIronPositon" type="Node2D" parent="."]
position = Vector2(10, -40)

[node name="SleepShroom" parent="." instance=ExtResource("18_jtvqg")]

[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
